--- a/templates/cart/detail.html
+++ b/templates/cart/detail.html
@@ -1,19 +1,19 @@
 {% extends "shop/base.html" %}
 {% load static %}
 {% block title %}
-    Your shopping cart
+    Корзина
 {% endblock %}
 {% block content %}
-    <h1>Your shopping cart</h1>
+    <h1>Корзина</h1>
     <table class="cart">
         <thead>
         <tr>
-            <th>Image</th>
-            <th>Product</th>
-            <th>Quantity</th>
-            <th>Remove</th>
-            <th>Unit price</th>
-            <th>Price</th>
+            <th>Изображение</th>
+            <th>Продукт</th>
+            <th>Количество</th>
+            <th>Удалить</th>
+            <th>Цена за единицу</th>
+            <th>Цена</th>
         </tr>
         </thead>
         <tbody>
@@ -32,13 +32,13 @@
                     </td>
                     <td>{{ product.name }}</td>
                     <td>{{ item.quantity }}</td>
-                    <td><a href="{% url "cart:cart_remove" product.id%}">Remove</a></td>
+                    <td><a href="{% url "cart:cart_remove" product.id%}">Удалить</a></td>
                     <td class="num">${{ item.price }}</td>
                     <td class="num">${{ item.total_price }}</td>
                 </tr>
             {% endwith %}
         {% endfor %}
-        <tr class="total">
+        <tr class="Суммарно:">
             <td>Total</td>
             <td colspan="4"></td>
             <td class="num">${{ cart.get_total_price }}</td>
@@ -46,7 +46,7 @@
         </tbody>
     </table>
     <p class="text-right">
-        <a href="{% url "shop:product_list" %}" class="button light">Continue shopping</a>
-        <a href="#" class="button">Checkout</a>
+        <a href="{% url "shop:product_list" %}" class="button light">Продолжить покупку</a>
+        <a href="#" class="button">Касса</a>
     </p>
 {% endblock %}
