--- a/templates/shop/base.html
+++ b/templates/shop/base.html
@@ -7,25 +7,25 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="{% static "css/base.css" %}" rel="stylesheet">
-        <title>{% block title %}Shop{% endblock %}</title>
+        <title>{% block title %}Магазин{% endblock %}</title>
 
 </head>
 <body>
     <div id="header">
-        <h1><a href="/" class="logo">Shop</a></h1>
+        <h1><a href="/" class="logo">Магазин</a></h1>
     </div>
 
     <div id="subheader">
         <div class="cart">
             {% with total_items=cart|length %}
                 {% if cart|length > 0 %}
-                    Your cart:
+                    Корзина:
                     <a href="{% url "cart:cart_detail" %}">
                         {{ total_items }} item{{ total_items|pluralize }},
                         ${{ cart.get_total_price }}
                     </a>
                 {% else %}
-                    Your cart is empty.
+                    Корзина пуста
                 {% endif %}
             {% endwith %}
         </div>
