--- a/templates/shop/base.html
+++ b/templates/shop/base.html
@@ -13,6 +13,7 @@
 <body>
     <div id="header">
         <h1><a href="/" class="logo">Магазин</a></h1>
+        <h1><a href="/" class="logo">Профиль</a></h1>
     </div>
 
     <div id="subheader">
