--- a/templates/shop/base.html
+++ b/templates/shop/base.html
@@ -15,7 +15,15 @@
         <h1><a href="/" class="logo">Магазин</a></h1>
         <h1><a href="/" class="logo">Профиль</a></h1>
     </div>
-
+        <div id="subheader">
+        <div class="cart">
+            {% if user_is_auth  %}
+                Profile
+            {% else %}
+                Anonymous
+            {% endif %}
+        </div>
+    </div>
     <div id="subheader">
         <div class="cart">
             {% with total_items=cart|length %}
