Fixed bugs with payment method and delivery type

--- a/templates/orders/order/create.html
+++ b/templates/orders/order/create.html
@@ -1,4 +1,5 @@
 {% extends "shop/base.html" %}
+{% load crispy_forms_filters %}
 
 {% block title %}Касса{% endblock %}
 
@@ -17,8 +18,10 @@
         <p>Всего: ${{ cart.get_total_price }}</p>
     </div>
     <form action="." method="post" class="order-form">
-        {{ form.as_p }}
-        <p><input type="submit" value="Place order"></p>
+        {{ form|crispy }}
+{#        {{ form.as_p }}#}
+
+        <p><input type="submit" value="Заказать"></p>
         {% csrf_token %}
     </form>
 {% endblock %}
