--- a/static/css/base.css
+++ b/static/css/base.css
@@ -217,9 +217,9 @@ ul.errorlist {
     margin-top:10px;
 }
 
-.order-form {
-    float:left;
-}
+/*.order-form {*/
+/*    float:left;*/
+/*}*/
 
 .order-info {
     float:right;
@@ -250,15 +250,15 @@ ul.errorlist {
 }
 
 /* braintree hosted fields */
-form div.field {
-    font-size:13px;
-    color:#666;
-    width:300px;
-    height:22px;
-    margin-bottom:10px;
-    padding:6px 12px;
-    border:0;
-    background:#efefef;
-    color:#666;
-    border-radius:4px;
-}
+/*form div.field {*/
+/*    font-size:13px;*/
+/*    color:#666;*/
+/*    width:300px;*/
+/*    height:22px;*/
+/*    margin-bottom:10px;*/
+/*    padding:6px 12px;*/
+/*    border:0;*/
+/*    background:#efefef;*/
+/*    color:#666;*/
+/*    border-radius:4px;*/
+/*}*/
