--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,5 +1,3 @@
-@import url(http://fonts.googleapis.com/css?family=Ubuntu);
-
 body {
     margin:0;
     padding:0;
@@ -8,6 +6,11 @@ body {
 
 h1, h2, h3, h4, h5 , h6 {
     font-family: 'Ubuntu', sans-serif; font-weight:normal;
+}
+
+.user_info {
+    width: 50px;
+    height: 50px;
 }
 
 a {
@@ -217,9 +220,6 @@ ul.errorlist {
     margin-top:10px;
 }
 
-/*.order-form {*/
-/*    float:left;*/
-/*}*/
 
 .order-info {
     float:right;
@@ -248,17 +248,3 @@ ul.errorlist {
 .order-info span {
     float:right;
 }
-
-/* braintree hosted fields */
-/*form div.field {*/
-/*    font-size:13px;*/
-/*    color:#666;*/
-/*    width:300px;*/
-/*    height:22px;*/
-/*    margin-bottom:10px;*/
-/*    padding:6px 12px;*/
-/*    border:0;*/
-/*    background:#efefef;*/
-/*    color:#666;*/
-/*    border-radius:4px;*/
-/*}*/
