--- a/templates/registration/logged_out.html
+++ b/templates/registration/logged_out.html
@@ -2,7 +2,7 @@
 {% block main %}
 
 <p>Вы вышли</p>
-    <a  href="{% url 'users:login' %}">Войдите снова</a>
-    <a  href="{% url 'shop:product_list' %}">К магазину</a>
+    <p><a  href="{% url 'users:login' %}">Войдите снова</a></p>
+    <p><a  href="{% url 'shop:product_list' %}">К магазину</a></p>
 
 {% endblock %}
