--- a/templates/registration/profile.html
+++ b/templates/registration/profile.html
@@ -19,17 +19,20 @@
     <h1>Информация о заказах</h1>
     <div>
         {% for order in orders %}
-            <hr>
             <p>Дата заказа: {{ order.0.order.created }}</p>
             <p>Имя: {{ order.0.order.first_name }}</p>
             <p>Фамилия: {{ order.0.order.last_name }}</p>
-            <div>
+            <ul> <h2>Заказ</h2>
+
                 {% for order_item in order.1 %}
-                    <p>Продукт: {{ order_item.product }}</p>
-                    <p>Цена: {{ order_item.price }}</p>
-                    <p>Количество: {{ order_item.quantity }}</p>
+                    <li>
+                        <p>Продукт: {{ order_item.product }}</p>
+                        <p>Цена: {{ order_item.price }}</p>
+                        <p>Количество: {{ order_item.quantity }}</p>
+                    </li>
                 {% endfor %}
-            </div>
+
+            </ul>
         {% endfor %}
 
     </div>
