--- a/templates/shop/base.html
+++ b/templates/shop/base.html
@@ -1,55 +1,75 @@
 {% load static %}
+{% load bootstrap4 %}
+
 <!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="{% static "css/base.css" %}" rel="stylesheet">
-        <title>{% block title %}Магазин{% endblock %}</title>
-
-</head>
-<body>
-    <div id="header">
-        <h1><a href="/" class="logo">Магазин</a></h1>
-        {% if user.is_authenticated  %}
-                <h1><a href="{% url 'users:profile' %}" class="logo">Профиль</a></h1>
-                <h1><a href="{% url 'users:logout' %}" class="logo">Выход</a></h1>
-            {% else %}
-                <h1><a href=" {% url 'users:register' %}" class="logo">Регистрация</a></h1>
-                <h1><a href="{% url 'users:login' %}" class="logo">Вход</a></h1>
-            {% endif %}
-
-    </div>
-        <div id="subheader">
-        <div class="cart">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>{% block title %}Магазин{% endblock %}</title>
+    <link rel="stylesheet" href="{% static 'css/base.css' %}">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  </head>
+  <body>
+    <div class="container">
+        <div class="row">
+            <div class="col-sm"><h3><a href="/" class="logo">Магазин</a></h3></div>
             {% if user.is_authenticated  %}
-                {{ user.first_name }} {{ user.last_name }}
-            {% else %}
-                Anonymous
+                    <div class="col-sm"><h3><a href="{% url 'users:profile' %}" class="logo">Профиль</a></h3></div>
+                    <div class="col-sm"><h3><a href="{% url 'users:logout' %}" class="logo">Выход</a></h3></div>
+                {% else %}
+                    <div class="col-sm"><h3><a href=" {% url 'users:register' %}" class="logo">Регистрация</a></h3></div>
+                    <div class="col-sm"><h3><a href="{% url 'users:login' %}" class="logo">Вход</a></h3></div>
             {% endif %}
         </div>
+    </div>
+
+    <div id="subheader">
+
+    </div>
+
+        <div class="container">
+        <div class='row align-items-end'>
+
+            {% if user.is_authenticated  %}
+                <div class="col align-self-end">{{ user.first_name }} - {{ user.last_name }}</div>
+            {% else %}
+                <div class="col align-self-end">Anonymous</div>
+            {% endif %}
+        </div>
+
+        <div class="row align-items-end">
+            <div class="col align-self-end" id="cart">Корзина:
+                {% with total_items=cart|length %}
+                    {% if cart|length > 0 %}
+
+                        <a href="{% url "cart:cart_detail" %}">
+                            {{ total_items }} item{{ total_items|pluralize }},
+                            ${{ cart.get_total_price }}
+                        </a>
+
+                    {% else %}
+                        Корзина пуста
+                    {% endif %}
+                {% endwith %}
+            </div>
+        </div>
+
     </div>
     <div id="subheader">
-        <div class="cart">
-            {% with total_items=cart|length %}
-                {% if cart|length > 0 %}
-                    Корзина:
-                    <a href="{% url "cart:cart_detail" %}">
-                        {{ total_items }} item{{ total_items|pluralize }},
-                        ${{ cart.get_total_price }}
-                    </a>
-                {% else %}
-                    Корзина пуста
-                {% endif %}
-            {% endwith %}
-        </div>
+
     </div>
     <div id="content">
         {% block content %}
         {% endblock %}
     </div>
-</body>
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  </body>
 </html>
 
