--- a/templates/registration/register_user.html
+++ b/templates/registration/register_user.html
@@ -1,5 +1,5 @@
 {% extends 'shop/base.html' %}
-
+{% load crispy_forms_field %}
 {% load bootstrap4 %}
 {% block title %}Регистрация {% endblock %}
 
