--- a/templates/shop/base.html
+++ b/templates/shop/base.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   </head>
   <body>
-    <div class="container">
+    <div class="container" id="nav_menu">
         <div class="row">
             <div class="col-sm"><h3><a href="/" class="logo">Магазин</a></h3></div>
             {% if user.is_authenticated  %}
@@ -22,6 +22,16 @@
                 {% else %}
                     <div class="col-sm"><h3><a href=" {% url 'users:register' %}" class="logo">Регистрация</a></h3></div>
                     <div class="col-sm"><h3><a href="{% url 'users:login' %}" class="logo">Вход</a></h3></div>
+
+                    <div class="col-sm">
+                        <button id="button_1" text="Черный цвет" class="buttons" onclick="button_1()"></button>
+                    </div>
+                    <div class="col-sm">
+                        <button id="button_2" value="Красный цвет" class="buttons" onclick="button_2()"></button>
+                    </div>
+                    <div class="col-sm">
+                        <button id="button_3" value="Рандомный цвет" class="buttons" onclick="button_3()"></button>
+                    </div>
             {% endif %}
         </div>
     </div>
@@ -67,6 +77,7 @@
     </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="{% static 'js/main.js' %}"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
