--- a/templates/shop/base.html
+++ b/templates/shop/base.html
@@ -24,13 +24,13 @@
                     <div class="col-sm"><h3><a href="{% url 'users:login' %}" class="logo">Вход</a></h3></div>
 
                     <div class="col-sm">
-                        <button id="button_1" text="Черный цвет" class="buttons" onclick="button_1()"></button>
+                        <button id="button_1" text="Черный цвет" class="buttons"></button>
                     </div>
                     <div class="col-sm">
-                        <button id="button_2" value="Красный цвет" class="buttons" onclick="button_2()"></button>
+                        <button id="button_2" value="Красный цвет" class="buttons"></button>
                     </div>
                     <div class="col-sm">
-                        <button id="button_3" value="Рандомный цвет" class="buttons" onclick="button_3()"></button>
+                        <button id="button_3" value="Рандомный цвет" class="buttons"></button>
                     </div>
             {% endif %}
         </div>
